Bug 18749: SQUIRRELFISH: const support is broken <https://bugs.webkit.org/show_bug.cgi?id=18749>

Cameron Zwarich  <cwzwarich@uwaterloo.ca>
Reviewed by Oliver.

Adds support for const during code generation.

Fixes 2 layout tests.


git-svn-id: http://svn.webkit.org/repository/webkit/branches/squirrelfish@32866 268f45cc-cd09-0410-ab3c-d52691b4dbfc